[tool.poetry]
name = "whatsapie"
version = "0.1.7"
description = "Unofficial Python wrapper for Meta's whatsapp cloud API"
authors = ["Aadil Varsh <aadilvarshofficial@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
