[tool.poetry]
name = "whatsapie"
version = "0.1.9"
description = "Unofficial Python wrapper for Meta's whatsapp cloud API"
authors = ["Aadil Varsh <aadilvarshofficial@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://advrxh.github.io/whatsapie"
repository = "https://github.com/advrxh/whatsapie"
keywords = ["whatsapp", "cloud", "api", "python", "wrapper"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
